--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "azamibot-md-multi",
+	"name": "Ely-MD",
 	"version": "6.0.0",
-	"description": "WhatsApp Bot - Recoded by Zerenity",
+	"description": "WhatsApp Bot",
 	"main": "main.js",
 	"type": "module",
 	"directories": {
@@ -80,9 +80,7 @@
 		"tesseract.js": "^5.0.2",
 		"url-regex-safe": "^4.0.0",
 		"wa-sticker-formatter": "^4.4.4",
-		"yargs": "^17.7.2",
-		"yt-search": "^2.10.4",
-		"ytdl-core": "^4.11.5"
+		"yargs": "^17.7.2"
 	},
 	"optionalDependencies": {
 		"@vitalets/google-translate-api": "^9.2.0",
