--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
 	"scripts": {
 		"start": "node main.js",
 		"build": "npm install",
-        "test3": "node index.js",
+		"test3": "node index.js",
 		"test": "node test.js",
 		"test2": "nodemon index.js",
 		"test4": "node ind.js"
 	},
-	"keywords": [
-	],
+	"keywords": [],
 	"homepage": "https://github.com/arasea2/MyEly",
 	"author": {
 		"name": "arasea2"
@@ -35,8 +34,8 @@
 		"@adiwajshing/keyed-db": "^0.2.4",
 		"@bochilteam/scraper": "^4.2.4",
 		"@whiskeysockets/baileys": "^6.5.0",
-		"awesome-phonenumber": "^6.1.0",
-		"axios": "^1.5.1",
+		"awesome-phonenumber": "^6.4.0",
+		"axios": "^1.6.3",
 		"brainly-scraper-v2": "^2.2.8",
 		"cfonts": "^3.2.0",
 		"chalk": "^5.3.0",
@@ -48,39 +47,39 @@
 		"file-type": "^18.5.0",
 		"fluent-ffmpeg": "^2.1.2",
 		"formdata-node": "^6.0.3",
-		"genshin-db": "^4.3.16",
+		"genshin-db": "^4.3.17",
 		"google-it": "^1.6.4",
-		"got": "^13.0.0",
-		"got-scraping": "^4.0.1",
-		"http": "^0.0.1-security",
+		"got": "^14.0.0",
+		"got-scraping": "^4.0.3",
 		"human-readable": "^0.2.1",
 		"imagemaker.js": "^2.0.4",
-		"jsdom": "^22.1.0",
+		"jsdom": "^23.0.1",
 		"link-preview-js": "^3.0.5",
 		"lodash": "^4.17.21",
 		"lowdb": "^5.1.0",
-		"moment-timezone": "^0.5.43",
-		"mongoose": "^8.0.1",
+		"moment-timezone": "^0.5.44",
+		"mongoose": "^8.0.3",
 		"node-gtts": "^2.0.2",
-		"node-webpmux": "^3.1.9",
-		"open": "^9.1.0",
+		"node-webpmux": "^3.2.0",
+		"open": "^10.0.2",
 		"perf_hooks": "^0.0.1",
-		"pino": "^8.16.0",
-		"pino-pretty": "^10.2.3",
-		"pm2": "^5.3.0",
+		"pino": "^8.17.2",
+		"pino-pretty": "^10.3.1",
 		"qrcode": "^1.5.3",
 		"qrcode-terminal": "^0.12.0",
 		"read-chunk": "^4.0.3",
 		"readline": "^1.3.0",
 		"similarity": "^1.2.1",
 		"socket.io": "^4.7.2",
-		"spottydl": "^0.2.2",
+		"spottydl": "^0.2.5",
 		"syntax-error": "^1.4.0",
 		"terminal-image": "^2.0.0",
-		"tesseract.js": "^5.0.2",
+		"tesseract.js": "^5.0.4",
 		"url-regex-safe": "^4.0.0",
 		"wa-sticker-formatter": "^4.4.4",
-		"yargs": "^17.7.2"
+		"yargs": "^17.7.2",
+		"yt-search": "^2.10.4",
+		"ytdl-core": "^4.11.5"
 	},
 	"optionalDependencies": {
 		"@vitalets/google-translate-api": "^9.2.0",
