--- a/package.json
+++ b/package.json
@@ -77,9 +77,7 @@
 		"tesseract.js": "^5.0.4",
 		"url-regex-safe": "^4.0.0",
 		"wa-sticker-formatter": "^4.4.4",
-		"yargs": "^17.7.2",
-		"yt-search": "^2.10.4",
-		"ytdl-core": "^4.11.5"
+		"yargs": "^17.7.2"
 	},
 	"optionalDependencies": {
 		"@vitalets/google-translate-api": "^9.2.0",
