--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
 		"@whiskeysockets/baileys": "^6.6.0",
 		"awesome-phonenumber": "^6.1.0",
 		"axios": "^1.5.1",
+		"brainly-scraper-v2": "^2.2.8",
 		"cfonts": "^3.2.0",
 		"chalk": "^5.3.0",
+		"cheerio": "^1.0.0-rc.12",
 		"emoji-api": "^3.0.1",
 		"express": "^4.18.2",
 		"file-type": "^18.5.0",
+		"fluent-ffmpeg": "^2.1.2",
 		"formdata-node": "^6.0.3",
+		"genshin-db": "^5.1.3",
+		"google-it": "^1.6.4",
 		"got": "^13.0.0",
 		"human-readable": "^0.2.1",
 		"jsdom": "^22.1.0",
@@ -50,20 +55,18 @@
 		"node-gtts": "^2.0.2",
 		"node-webpmux": "^3.1.9",
 		"open": "^9.1.0",
+		"os": "^0.1.2",
 		"pino": "^8.16.0",
 		"pino-pretty": "^10.2.3",
+		"pm2": "^5.3.1",
 		"similarity": "^1.2.1",
+		"spottydl": "^0.2.2",
 		"syntax-error": "^1.4.0",
 		"terminal-image": "^2.0.0",
+		"tesseract.js": "^5.0.2",
 		"url-regex-safe": "^4.0.0",
 		"wa-sticker-formatter": "^4.4.4",
 		"yargs": "^17.7.2",
-		"brainly-scraper-v2": "^2.2.8",
-		"cheerio": "^1.0.0-rc.12",
-		"fluent-ffmpeg": "^2.1.2",
-		"google-it": "^1.6.4",
-		"spottydl": "^0.2.2",
-		"tesseract.js": "^5.0.2",
 		"yt-search": "^2.10.4",
 		"ytdl-core": "^4.11.5"
 	}
